src/components/Task/Task.scss
@use '../../styles/variables' as *;

.task-card {
  background: $task-color;
  border-radius: 5px;
  padding: 15px 20px;
  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
  cursor: grab;
  transition: transform 0.1s ease, box-shadow 0.2s ease;

  &:active {
    cursor: grabbing;
  }
}

.task-drag-handle {
  display: flex;
  flex-direction: column;
  gap: 15px;
}

.task-title {
  font-size: 18px;
  font-weight: bold;
  color: $main-font;
}

.task-description {
  font-size: 16px;
  color: $primary-font;
  line-height: 1.4;
}

.task-priority {
  font-size: 12px;
  font-weight: 500;
  text-align: center;
  padding: 7px;
  border-radius: 100px;
  color: white;

  &.low {
    background-color: $low-priority-color; 
  }

  &.medium {
    background-color: $medium-priority-color;
  }

  &.high {
    background-color: $high-priority-color; 
  }
}

.task-header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-bottom: 15px;
}

.task-buttons {
  display: flex;
  gap: 10px;
  justify-content: center;
  align-items: center;

  button {
    width: 18px;       
    height: 18px;
    border: none;
    background: transparent;
    cursor: pointer;

    img {
      width: 18px;    
      height: 18px;
    }
  }
}

